[package]
name = "console"
version = "0.1.0"
authors = ["Kaneyuki Hiromasa <matsugen2511@gmail.com>"]
edition = "2018"

[dependencies]
sprite-studio-converter={path = "../sprite-studio-converter/"}
fight_game={path="../fight_game/", features=["serialize"]}
log= "0.4.8"
env_logger= "0.7.1"
failure= "0.1.6"
structopt= "0.3.9"

ron= "0.5.1"
serde= { version = "1.0.104", features = ["derive"] }
toml= "0.5.6"
